# mrirage

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  index.html  mrirage.html  pyproject.toml  search.js  setup.cfg
.github/workflows/: docs.yml  pypi.yaml  pypi.yml  test.yml  tests.yml  workflows.yml
examples/: README.md
examples/tutorial_1/: README.md  main.py
mrirage/: common.html  composition.html  datacube.html  loader.html  slicer.html  utils.html
mrirage/common/: common.html  mpl_dom.html
mrirage/common/mpl_dom/: mpl.html
mrirage/composition/: composition.html  grid.html  layer.html  view.html
mrirage/composition/layer/: annotation.html  image_3d.html  layer.html  style_data.html
mrirage/composition/view/: view.html
mrirage/datacube/: datacube.html
mrirage/loader/: nifti.html
mrirage/slicer/: bounds.html  common.html
mrirage/utils/: composition.html
src/mrirage/: __init__.py
src/mrirage/common/: __init__.py  common.py
src/mrirage/common/mpl_dom/: __init__.py  mpl.py
src/mrirage/composition/: __init__.py  composition.py  grid.py
src/mrirage/composition/layer/: __init__.py  annotation.py  image_3d.py  layer.py  style_data.py
src/mrirage/composition/view/: __init__.py  view.py
src/mrirage/datacube/: __init__.py  datacube.py
src/mrirage/loader/: __init__.py  nifti.py
src/mrirage/slicer/: __init__.py  bounds.py  common.py  slice_0d.py  slice_2d.py  slice_3d.py  slice_scalar.py  slicer.py  spoint.py  utils.py
src/mrirage/utils/: __init__.py  composition.py
tests/test_mrirage/: test_datacube.py  test_slicer.py
