[tool.poetry]
name = "mrirage"
version = "0.1.1"
authors = ["Florian Rupprecht <floruppr@gmail.com>"]
license = "MIT"
description = "MRI visualization"
readme = "README.md"
repository = "https://github.com/nx10/mrirage"
homepage = "https://github.com/nx10/mrirage"
documentation = "https://github.com/nx10/mrirage/docs"
keywords = ["MRI", "visualization"]
packages = [{include = "mrirage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fineslice = ">=0.0.2,<0.0.4"
matplotlib = "^3.8.0"
nibabel = "^5.1.0"
scipy = "^1.11.3"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.2"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.1.0"

[tool.poetry.extras]
docs = ["pdoc"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
ignore-init-module-imports = true
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102",  # cls should not be annotated.
  "ANN401"  # Dynamically typed expressions (typing.Any) are disallowed in *args / **kwargs
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = []

[tool.mypy]
ignore_missing_imports = true
exclude = [
  "examples/"
]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
